--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>抽奖系统</title>
 	<link href="css/css.css" rel="stylesheet" type="text/css">
 	<script type="text/javascript" src="js/jquery.min.js"></script>
+	<meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 </head>
 <body>
 
